deploy/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-no-autoscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v1
  template:
    metadata:
      labels:
        app: my-app
        version: v1
    spec:
      containers:
        - name: container
          image: arenchill/videoapp:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-with-autoscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v2
  template:
    metadata:
      labels:
        app: my-app
        version: v2
    spec:
      containers:
        - name: my-container
          image: arenchill/videoapp:latest
          ports:
            - containerPort: 8080
